tests/paczka1/small_fuzzy/24137102.err
Error in line 4: H2sMhrcR7K A966 44,6
Error in line 2: YY2p80u07 A856 84,2
Error in line 3: ujCc S57 41,2
Error in line 5: H2sMhrcR7K S57 51,5
